[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timeqa_agent"
version = "0.1.0"
description = "Temporal Event Extraction and Timeline Analysis Agent"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "TimeQA Team"}
]
keywords = ["nlp", "temporal", "event-extraction", "timeline", "knowledge-graph"]

dependencies = [
    "requests>=2.28.0",
    "numpy>=1.21.0",
    "networkx>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["timeqa_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
